@@ -18,6 +18,7 @@ namespace ndhist {
 
 namespace stats {
 
+void register_excess();
 void register_expectation();
 void register_kurtosis();
 void register_mean();
@@ -34,6 +35,7 @@ void register_stats_module()
     {
         bp::scope stats_module_scope(stats_module);
 
+        stats::register_excess();
         stats::register_expectation();
         stats::register_kurtosis();
         stats::register_mean();
